slack-viewer/deploy/base/deployment-slackviewer-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackviewer-backend
  namespace: slackviewer
  labels:
    iapolinario.com/function: web
spec:
  selector:
    matchLabels:
      app: slackviewer-backend
  template:
    metadata:
      labels:
        app: slackviewer-backend
      annotations:
        admission.datadoghq.com/enabled: "true"
        ad.datadoghq.com/slackviewer-backend.logs: '[{"source":"react","service":"slackviewer-backend"}]'
    spec:
      serviceAccountName: slackviewer
      containers:
        - name: slackviewer-backend
          image: BUILD_IMAGE
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /-
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "2Gi"
