slack-viewer/deploy/base/deployment-slackviewer-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slackviewer-frontend
  namespace: slackviewer
  labels:
    iapolinario.com/function: web
spec:
  selector:
    matchLabels:
      app: slackviewer-frontend
  template:
    metadata:
      labels:
        app: slackviewer-frontend
      annotations:
        admission.datadoghq.com/enabled: "true"
        ad.datadoghq.com/slackviewer-frontend.logs: '[{"source":"react","service":"slackviewer-frontend"}]'
    spec:
      serviceAccountName: slackviewer
      containers:
        - name: slackviewer-frontend
          image: BUILD_IMAGE
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "2Gi"
