slack-viewer/deploy/base/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: slackviewer-frontend
  namespace: slackviewer
  labels:
    iapolinario.com/function: web
spec:
  ports:
    - name: http
      port: 8400
  selector:
    app: slackviewer-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: slackviewer-backend
  namespace: slackviewer
  labels:
    iapolinario.com/function: backend
spec:
  ports:
    - name: http
      port: 8500
  selector:
    app: slackviewer-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slackviewer-ingress
  namespace: slackviewer
  labels:
    iapolinario.com/function: web
  annotations:
    external-dns.alpha.kubernetes.io/host: unset
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: unset
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slackviewer-frontend
                port:
                  number: 8400
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: slackviewer-backend
                port:
                  number: 8500
  tls:
    - hosts:
        - unset
      secretName: slackviewer-cert
